## Process this file with automake to generate a Makefile.in
## To build all programs with GTK+ uncomment these lines.
##AM_CPPFLAGS = @GTK_CFLAGS@
##AM_LDADD = @GTK_LIBS@

bin_PROGRAMS = goplop
goplop_SOURCES = goplop.c

## Only our GUI program uses GTK+ at the moment.
goplop_CPPFLAGS = @GTK_CFLAGS@
goplop_LDADD = @GTK_LIBS@

CLEANFILES = *~
